# idealloc

./: Cargo.toml  README.md
copycat/: Cargo.toml
copycat/src/lib/: circus.rs  core.rs  ffi.rs  logic.rs  mod.rs
coreba/: Cargo.toml  perf.data  perf.data.old  vital_info.md
coreba/src/: analyze.rs  baselines.rs  helpe.rs  instance.rs  job.rs  jobset.rs  lib.rs
coreba/src/algo/: boxing.rs  mod.rs  placement.rs
coreba/src/lib/: algo.rs  elements.rs  io.rs  mcts.rs  mod.rs  place.rs  utils.rs
coreba/src/v0.3/: algo.rs  analyze.rs  baselines.rs  helpe.rs  instance.rs  job.rs  jobset.rs  mod.rs  space.rs  types.rs  utils.rs
coreba/src/v0.3/algo/: boxing.rs  mod.rs  placement.rs
coreba/tests/: tests.rs
coreba/tests/data/: bert_nezha.csv  hi_again.plc  iree_first.csv  non_existent.csv  tiny_bert.csv
coreba/tests/data/iree/: iree_mobilebert.csv
env/: Dockerfile  notes.md
sanity/: Cargo.toml
sanity/src/: lib.rs
somas_tensors/: bert_base.csv  bert_large.csv  bert_nezha.csv  pangu_13B.csv  pangu_2.6B.csv  resnet50.csv  tiny_bert.csv
tests/ls/: ls.trc
uncore/: Cargo.toml
uncore/src/lib/: ffi.rs  logger.rs  mapfind.rs  mod.rs  tracer.rs
