[package]
name = "copycat"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap                = "2.0.2"
libc                    = "0.2"
libc-stdhandle          = "0.1"
once_cell               = "1.18.0"
ahash                   = "0.8.3"

[lib]
name                    = "ccmalloc"        # "copy-cat-malloc"
crate-type              = ["cdylib"]
path                    = "src/lib/mod.rs"
