[package]
name = "coreba"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow      = { workspace = true }
indexmap    = { workspace = true }
ahash       = { workspace = true }
thiserror   = { workspace = true }
rand        = { workspace = true }
once_cell   = { workspace = true }
rand_chacha = "0.3.1"

[lib]
path    = "src/lib/mod.rs"

[[bin]]
name    = "coreba"
path    = "src/bin/main.rs"