[package]
name = "coreba"
authors.workspace = true
edition.workspace = true
rust-version = "1.79.0"
license.workspace = true
publish.workspace = true
version = "0.62.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools   = { workspace = true }
thiserror   = { workspace = true }
rayon       = { workspace = true }

[lib]
path    = "src/v0.3/mod.rs"
