[package]
name = "sanity"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap    = {version = "2.0.2", features = ["rayon", "serde"] }
ahash       = "0.8.3"
serde       = {version = "1.0.193", features = ["derive"]}
rayon       = "1.8.0"
plotters    = "0.3.5"

[[bin]]
name    = "report"
path    = "src/bin/report.rs"

[[bin]]
name    = "adapt"
path    = "src/bin/adapt.rs"