[package]
name = "sanity"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash       = "0.8.3"
indexmap    = {version = "2.0.2", features = ["rayon", "serde"] }
serde       = {version = "1.0.217", features = ["derive"]}
serde_json  = "1.0.135"
coreba      = { path = "../coreba" }
rayon       = { workspace = true }
plotters    = { workspace = true }
clap        = { workspace = true }
rand        = { workspace = true }

[[bin]]
name    = "report"
path    = "src/bin/report.rs"

[[bin]]
name    = "adapt"
path    = "src/bin/adapt.rs"

[[bin]]
name    = "iopddl_read"
path    = "src/bin/iopddl_read.rs"