[package]
name                    = "uncore"
description             = "Tools for recording and reproducing allocation patterns."
authors.workspace       = true
edition.workspace       = true
rust-version.workspace  = true
license.workspace       = true
publish.workspace       = true
version.workspace       = true

[dependencies]
libc                    = "0.2"
libc-stdhandle          = "0.1"
once_cell               = "1.18.0"
ahash                   = "0.8.3"
indexmap                = "2.0.2"

[lib]
name                    = "itrc"
crate-type              = ["cdylib"]
path                    = "src/lib/mod.rs"